--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>The Food Vault</title>
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://unpkg.com/vue@next"></script>
-    <!-- <script type="module" src="/src/main.js"></script> -->
-    <script src="app.js"></script>
+    <!-- <script src="https://unpkg.com/vue@next"></script> -->
+    <script type="module" src="/src/main.js"></script>
+    <!-- <script src="app.js"></script> -->
   </body>
 </html>
