--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <title>The Food Vault</title>
   </head>
+
   <body>
+
+    <!-- Connect Vue.js Application here -->
     <div id="app"></div>
-    <!-- <script src="https://unpkg.com/vue@next"></script> -->
-    <script type="module" src="/src/main.js"></script>
-    <!-- <script src="app.js"></script> -->
+
+    <!-- Main Navigation bar for top of page -->
+    <nav>
+      <ul>
+        <a href="./index.html">Home</a>
+        <a href="./"></a>
+      </ul>
+    </nav>
+
+    <script src="app.js"></script>
   </body>
 </html>
