--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
       <h1><b>Welcome to The Food Vault</b></h2>
 
       <!-- Trending Today section -->
-      
       <section id="trending-today"></section>
+
+      <!-- This is the testimonial section -->
+      <section id="testimonial"></section>
 
     </main>
 
     <script src="app.js"></script>
   </body>
 </html>
-
-
-
