this is frustrating

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
       <!-- This is the testimonial section -->
       <section id="testimonial"></section>
 
+      <!-- More changes made here by Moose -->
+
     </main>
 
     <script src="app.js"></script>
