--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
 
       <!-- Trending Today section -->
       <section id="trending-today"></section>
-<!-- hi -->
+      
       <!-- This is the testimonial section -->
       <section id="testimonial"></section>
 
       <!-- More changes made here by Moose -->
+
+      <!-- Your comment was removed by ME, the MOOSE -->
 
     </main>
 
