minor changes and inclusion of botpress webchat

--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -25,6 +25,7 @@
     <!-- Main View -->
     <h1> This is the Catalogue Page</h1>
 
+    <script src="http://localhost:3000/assets/modules/channel-web/inject.js"></script>
     <script src="../app.js"></script>
   </body>
 </html>
