--- a/nearme/nearme.html
+++ b/nearme/nearme.html
@@ -27,6 +27,7 @@
       This is the Near Me Page
     </h1>
 
+    <script src="http://localhost:3000/assets/modules/channel-web/inject.js"></script>
     <script src="../app.js"></script>
   </body>
 </html>
