--- a/index.html
+++ b/index.html
@@ -27,10 +27,41 @@
       <h1><b>Welcome to The Food Vault</b></h2>
 
       <!-- Trending Today section -->
-      <section id="trending-today"></section>
+      <section id="trending-today">
+        <br><hr>
+        <h2>Trending Today</h2>
+        <hr><br>
+        <div class="trending-today-container">
+          <div class="trending-today-item">
+            <!-- <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt=""> -->
+            <h3>Burger</h3>
+
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
+            </p>
+          </div>
+          <div class="trending-today-item">
+            <!-- <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt=""> -->
+            <h3>Burger</h3>
+            
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
+            </p>
+          </div>
+          <div class="trending-today-item">
+            <!-- <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt=""> -->
+            <h3>Burger</h3>
+
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
+            </p>
+          </div>
+        </div>
+      </section>
 
     </main>
 
+    <script src="http://localhost:3000/assets/modules/channel-web/inject.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
