substantiated the landing page, minor css

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 
     <!-- Main View -->
     <main>
+      <br>
       <h1><b>Welcome to The Food Vault</b></h2>
 
       <!-- Trending Today section -->
-<<<<<<< HEAD
       <section id="trending-today">
         <br><hr>
         <h2>Trending Today</h2>
         <hr><br>
         <div class="trending-today-container">
           <div class="trending-today-item">
-            <!-- <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt=""> -->
+            <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
 
             <p>
@@ -42,7 +42,7 @@
             </p>
           </div>
           <div class="trending-today-item">
-            <!-- <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt=""> -->
+            <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
             
             <p>
@@ -50,7 +50,7 @@
             </p>
           </div>
           <div class="trending-today-item">
-            <!-- <img src="https://images.unsplash.com/photo-1518791841217-8f162f1e1131?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60" alt=""> -->
+            <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
 
             <p>
@@ -59,12 +59,48 @@
           </div>
         </div>
       </section>
-=======
-      <section id="trending-today"></section>
-      
-      <!-- This is the testimonial section -->
-      <section id="testimonial"></section>
->>>>>>> 2a29ba4bb0102f29cfd962d0cfb89d4edcc3d4c0
+
+      <!-- Testimonials section -->
+      <section id="testimonials">
+        <br><hr>
+        <h2>Testimonials</h2>
+        <hr><br>
+        <div class="testimonials-container">
+          <div class="testimonial-item">
+            <div class="user-picture">
+              <img src="https://picsum.photos/150" alt="">
+            </div>
+            <div class="user-name-comment">
+              <h4>Mary Jane</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
+              </p>
+            </div>
+          </div>
+          <div class="testimonial-item">
+            <div class="user-picture">
+              <img src="https://picsum.photos/150" alt="">
+            </div>
+            <div class="user-name-comment">
+              <h4>John Doe</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
+              </p>
+            </div>
+          </div>
+          <div class="testimonial-item">
+            <div class="user-picture">
+              <img src="https://picsum.photos/150" alt="">
+            </div>
+            <div class="user-name-comment">
+              <h4>Another Irrelevant Person</h4>
+              <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
 
     </main>
 
