--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -23,7 +23,12 @@
     </nav>
 
     <!-- Main View -->
-    <h1> This is the Catalogue Page</h1>
+    <main>
+      <h1> This is the Catalogue Page</h1>
+      <h2> Here you can find the listing of all restaurants under each cuisine category</h2>
+      <h3> Click on the cuisine category to view the list of restaurants.<br>Alternatively, you can search for a place right from the get go.</h3>
+    </main>
+
 
     <script src="http://localhost:3000/assets/modules/channel-web/inject.js"></script>
     <script src="../app.js"></script>
