--- a/index.html
+++ b/index.html
@@ -67,42 +67,58 @@
         <hr><br>
         <div class="testimonials-container">
           <div class="testimonial-item">
-            <div class="user-picture">
-              <img src="https://picsum.photos/150" alt="">
-            </div>
             <div class="user-name-comment">
               <h4>Mary Jane</h4>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
               </p>
             </div>
-          </div>
-          <div class="testimonial-item">
             <div class="user-picture">
               <img src="https://picsum.photos/150" alt="">
             </div>
+          </div>
+          <div class="testimonial-item">
             <div class="user-name-comment">
               <h4>John Doe</h4>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
               </p>
             </div>
-          </div>
-          <div class="testimonial-item">
             <div class="user-picture">
               <img src="https://picsum.photos/150" alt="">
             </div>
+          </div>
+          <div class="testimonial-item">
             <div class="user-name-comment">
               <h4>Another Irrelevant Person</h4>
               <p>
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
               </p>
             </div>
+            <div class="user-picture">
+              <img src="https://picsum.photos/150" alt="">
+            </div>
           </div>
         </div>
       </section>
-
     </main>
+    
+    <!-- Footer -->
+    <footer>
+      <br><hr>
+      <p>
+        <a href="https://www.instagram.com/thefoodvault">
+          <img src="images/instagram.png" alt="Instagram" width="30" height="30">
+        </a>
+        <a href="
+        https://www.twitter.com/thefoodvault">
+          <img src="images/twitter.png" alt="Twitter" width="30" height="30">
+        </a>
+      </p>
+      <p>
+        &copy; The Food Vault by Team Kil-A-Bytes
+      </p>
+    </footer>
 
     <script src="http://localhost:3000/assets/modules/channel-web/inject.js"></script>
     <script src="app.js"></script>
