--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
     <!-- Main View -->
     <main>
       <br>
-      <h1><b>Welcome to The Food Vault</b></h2>
+      <h1>
+        <b>Welcome to The Food Vault</b>
+      </h2>
 
       <!-- Trending Today section -->
       <section id="trending-today">
