--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -32,8 +32,8 @@
         <br><hr>
         <h2>CUISINES</h2>
         <hr><br>
-        <div class="container">
-          <div class="card_item ">
+        <div class="vertical_container">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Chinese</h3>
 
@@ -41,7 +41,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
-          <div class="card_item ">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Fried</h3>
             
@@ -49,7 +49,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
-          <div class="card_item ">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Thai</h3>
 
@@ -57,7 +57,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
-          <div class="card_item ">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Indian</h3>
             
