--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <br><hr>
         <h2>Trending Today</h2>
         <hr><br>
-        <div class="container">
-          <div class="card_item ">
+        <div class="vertical_container">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
 
@@ -43,7 +43,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
-          <div class="card_item ">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
             
@@ -51,7 +51,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
-          <div class="card_item ">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
 
@@ -67,8 +67,8 @@
         <br><hr>
         <h2>Testimonials</h2>
         <hr><br>
-        <div class="testimonials-container">
-          <div class="testimonial-item">
+        <div class="horizonal_container">
+          <div class="horizontal_card">
             <div class="user-name-comment">
               <h4>Mary Jane</h4>
               <p>
@@ -79,7 +79,7 @@
               <img src="https://picsum.photos/150" alt="">
             </div>
           </div>
-          <div class="testimonial-item">
+          <div class="horizontal_card">
             <div class="user-name-comment">
               <h4>John Doe</h4>
               <p>
@@ -90,7 +90,7 @@
               <img src="https://picsum.photos/150" alt="">
             </div>
           </div>
-          <div class="testimonial-item">
+          <div class="horizontal_card">
             <div class="user-name-comment">
               <h4>Another Irrelevant Person</h4>
               <p>
