Update on Ratings in Near Me - Shay

--- a/nearme/nearme.html
+++ b/nearme/nearme.html
@@ -50,6 +50,7 @@
       <br> <br>
       <label>Choose a rating:</label>
       <select>
+        <option value="rating">Any</option> <!-- if the rating does not matter -->
         <option value="star1">1</option>
         <option value="star2">2</option>
         <option value="star3">3</option>
