--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
         <a href="https://www.instagram.com/thefoodvault">
           <img src="images/instagram.png" alt="Instagram" width="30" height="30">
         </a>
-        <a href="
-        https://www.twitter.com/thefoodvault">
+        <a href="https://www.twitter.com/thefoodvault">
           <img src="images/twitter.png" alt="Twitter" width="30" height="30">
         </a>
       </p>
