--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <nav id="main-nav-bar" class="nav-bar">
       <ul>
         <a href="./index.html"><button class="selected">Home</button></a>
+        <a href="./testimonials/testimonials.html"><button>Testimonials</button></a>
         <a href="./catalogue/catalogue.html"><button>Catalogue</button></a>
-        <a href="./nearme/nearme.html"><button>Near Me</button></a>
       </ul>
     </nav>
 
@@ -58,48 +58,6 @@
             <p>
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
-          </div>
-        </div>
-      </section>
-
-      <!-- Testimonials section -->
-      <section id="testimonials">
-        <br><hr>
-        <h2>Testimonials</h2>
-        <hr><br>
-        <div class="horizonal_container">
-          <div class="horizontal_card">
-            <div class="user-name-comment">
-              <h4>Mary Jane</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
-              </p>
-            </div>
-            <div class="user-picture">
-              <img src="https://picsum.photos/150" alt="">
-            </div>
-          </div>
-          <div class="horizontal_card">
-            <div class="user-name-comment">
-              <h4>John Doe</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
-              </p>
-            </div>
-            <div class="user-picture">
-              <img src="https://picsum.photos/150" alt="">
-            </div>
-          </div>
-          <div class="horizontal_card">
-            <div class="user-name-comment">
-              <h4>Another Irrelevant Person</h4>
-              <p>
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
-              </p>
-            </div>
-            <div class="user-picture">
-              <img src="https://picsum.photos/150" alt="">
-            </div>
           </div>
         </div>
       </section>
