--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport"    content="width=device-width, initial-scale=1.0" />
+    <meta name="author"      content="Team Kil-A-Bytes">
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet"   href="style.css">
     <title>The Food Vault</title>
   </head>
 
@@ -25,17 +26,15 @@
     <!-- Main View -->
     <main>
       <br>
-      <h1>
-        <b>Welcome to The Food Vault</b>
-      </h2>
+      <h1><b>Welcome to The Food Vault</b></h2>
 
       <!-- Trending Today section -->
       <section id="trending-today">
-        <br><hr>
-        <h2>Trending Today</h2>
-        <hr><br>
-        <div class="vertical_container">
-          <div class="vertical_card">
+        <br>
+        <h2><b>See Which Places Are Trending Today</b></h2>
+        <br>
+        <div class="vertical-container">
+          <div class="vertical-card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
 
@@ -43,7 +42,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
-          <div class="vertical_card">
+          <div class="vertical-card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
             
@@ -51,7 +50,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
-          <div class="vertical_card">
+          <div class="vertical-card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
 
@@ -59,13 +58,15 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
+          <br>
         </div>
       </section>
     </main>
     
     <!-- Footer -->
     <footer>
-      <br><hr>
+      <br><br>
+      <hr>
       <p>
         <a href="https://www.instagram.com/thefoodvault">
           <img src="images/instagram.png" alt="Instagram" width="30" height="30">
