--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -6,7 +6,7 @@
     <meta name="viewport"    content="width=device-width, initial-scale=1.0" />
     <meta name="author"      content="Team Kil-A-Bytes">
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet"   href="../style.css">
     <title>Testimonials</title>
   </head>
 
@@ -27,11 +27,11 @@
     <main>
       <!-- Testimonials section -->
       <section id="testimonials">
-        <br><hr>
-        <h2>Testimonials</h2>
+        <br><br>
+        <h2><b>See What Our Users Have To Say About Us!</b></h2>
         <hr><br>
-        <div class="horizonal_container">
-          <div class="horizontal_card">
+        <div class="horizontal-container">
+          <div class="horizontal-card">
             <div class="user-name-comment">
               <h4>Mary Jane</h4>
               <p>
@@ -42,7 +42,7 @@
               <img src="https://picsum.photos/150" alt="">
             </div>
           </div>
-          <div class="horizontal_card">
+          <div class="horizontal-card">
             <div class="user-name-comment">
               <h4>John Doe</h4>
               <p>
@@ -53,7 +53,7 @@
               <img src="https://picsum.photos/150" alt="">
             </div>
           </div>
-          <div class="horizontal_card">
+          <div class="horizontal-card">
             <div class="user-name-comment">
               <h4>Another Irrelevant Person</h4>
               <p>
@@ -70,7 +70,7 @@
 
     <!-- Footer -->
     <footer>
-      <br><hr>
+      <br><br><hr>
       <p>
         <a href="https://www.instagram.com/thefoodvault">
           <img src="images/instagram.png" alt="Instagram" width="30" height="30">
