fixed class names

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
         <br>
         <h2><b>See Which Places Are Trending Today</b></h2>
         <br>
-        <div class="vertical-container">
-          <div class="vertical-card">
+        <div class="vertical_container">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
 
@@ -42,7 +42,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
-          <div class="vertical-card">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
             
@@ -50,7 +50,7 @@
               Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ipsam aperiam aliquid autem qui est architecto amet eius inventore cum. Dolores quibusdam beatae minima blanditiis mollitia sunt in laudantium molestiae tempore?
             </p>
           </div>
-          <div class="vertical-card">
+          <div class="vertical_card">
             <img src="https://picsum.photos/150" alt="">
             <h3>Burger</h3>
 
@@ -62,25 +62,25 @@
         </div>
       </section>
     </main>
-    
-    <!-- Footer -->
-    <footer>
-      <br><br>
-      <hr>
-      <p>
-        <a href="https://www.instagram.com/thefoodvault">
-          <img src="images/instagram.png" alt="Instagram" width="30" height="30">
-        </a>
-        <a href="https://www.twitter.com/thefoodvault">
-          <img src="images/twitter.png" alt="Twitter" width="30" height="30">
-        </a>
-      </p>
-      <p>
-        &copy; The Food Vault by Team Kil-A-Bytes
-      </p>
-    </footer>
 
     <script src="http://localhost:3000/assets/modules/channel-web/inject.js"></script>
     <script src="app.js"></script>
   </body>
+  
+  <!-- Footer -->
+  <footer>
+    <br><br>
+    <hr>
+    <p>
+      <a href="https://www.instagram.com/thefoodvault">
+        <img src="images/instagram.png" alt="Instagram" width="30" height="30">
+      </a>
+      <a href="https://www.twitter.com/thefoodvault">
+        <img src="images/twitter.png" alt="Twitter" width="30" height="30">
+      </a>
+    </p>
+    <p>
+      &copy; The Food Vault by Team Kil-A-Bytes
+    </p>
+  </footer>
 </html>
