--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
       </section>
     </main>
 
-    <script src="http://localhost:3000/assets/modules/channel-web/inject.js"></script>
-    <script src="app.js"></script>
+    <iframe id="annabot-iframe" src="https://tfv-annabot.herokuapp.com/s/chat" frameborder="1" width="300" height="900"></iframe>
+
+    <!-- <script src="https://tfv-annabot.herokuapp.com/assets/modules/channel-web/inject.js"></script>
+    <script src="app.js"></script> -->
   </body>
   
   <!-- Footer -->
