--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -40,24 +40,25 @@
               <hr><br>
         
               <form id="filter-catalogue">
+                <label>Choose a cuisine/style:</label>
+                <select id="cuisine-selections">
+                  <option value="undecided">Any</option>
+                  <option value="thai">Thai</option>
+                  <option value="indian">Indian</option>
+                  <option value="chinese">Chinese</option>
+                </select>
+                <br><br>
                 <label>Choose a location:</label>
-                <select>
+                <select id="area-selections">
+                  <option value="all">Anywhere</option>
                   <option value="chag">Chaguanas</option>
                   <option value="pos">Port of Spain</option>
                   <option value="sanfernando">San Fernando</option>
                   <option value="siparia">Siparia</option>
                 </select>
                 <br><br>
-                <label>Choose a cuisine/style:</label>
-                <select>
-                  <option value="undecided">Undecided</option>
-                  <option value="thai">Thai</option>
-                  <option value="indian">Indian</option>
-                  <option value="chinese">Chinese</option>
-                </select>
-                <br><br>
                 <label>Choose a rating:</label>
-                <select>
+                <select id="rating-selections">
                   <option value="rating">Any</option> <!-- if the rating does not matter -->
                   <option value="star1">1</option>
                   <option value="star2">2</option>
@@ -66,7 +67,7 @@
                   <option value="star5">5</option>
                 </select>
                 <br><br>
-                <input type="submit" class="button" value="Show Me Places!">
+                <input type="submit" class="button" value="Show Me Places!" onclick="getRestaurantListing()">
       
                 <p>(You can always search our entire catalogue for all areas by searching from the get-go!)</p>
               </form>
@@ -112,6 +113,23 @@
         document.getElementById("chatbot-area").style.width = "0";
         document.getElementById("page-content").style.marginLeft = "0";
       }
+
+      function getRestaurantListing() {
+        var area = document.getElementById("area-selections").value;
+        var cuisine = document.getElementById("cuisine-selections").value;
+        var rating = document.getElementById("rating-selections").value;
+
+        if (cuisine == "undecided") {
+          cuisine = "";
+        }
+        if (rating == "rating") {
+          rating = "";
+        }
+
+        // AJAX request to get the restaurant listing from the NocoDB database via GET request
+        let response = fetch("https://nocodb.herokuapp.com/api/restaurants?area=" + area + "&cuisine=" + cuisine + "&rating=" + rating);
+      }
     </script>
+
   </body>
 </html>
