minor edits to page backgrounds

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
     <link rel="stylesheet"   href="style.css">
     <title>The Food Vault</title>
+    <style>
+      label{
+        display: inline;
+      }
+    </style>
   </head>
 
   <body>
@@ -65,6 +70,7 @@
               </div>
               <br>
             </div>
+            <br><hr>
           </section>
         </div>
 
