fixed chatarea overflow for mobile

--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -103,7 +103,7 @@
                   <!-- Name Data field -->
                   <label class="label">Name:</label>
                   <br>
-                  <input type="name" name="Name" style="width: 300px;">
+                  <input type="name" name="Name" style="width: 300px; height: 30px;"">
                   <br></br>
 
                   <!-- Comment Data field -->
