--- a/index.html
+++ b/index.html
@@ -78,16 +78,23 @@
     <footer>
       <br><br><hr>
       <p>
-        <a href="https://www.instagram.com/thefoodvault">
-          <img src="images/instagram.png" alt="Instagram" width="30" height="30">
-        </a>
-        <a href="https://www.twitter.com/thefoodvault">
-          <img src="images/twitter.png" alt="Twitter" width="30" height="30">
-        </a>
-      </p>
-      <p>
-        &copy; The Food Vault by Team Kil-A-Bytes
-      </p>
+        <div class="horizontal-container">
+          <div class="vertical-container">
+            <a href="https://www.instagram.com/thefoodvault">
+              <img src="images/instagram.png" alt="Instagram" width="30" height="30">
+            </a>
+            <a href="https://www.twitter.com/thefoodvault">
+              <img src="images/twitter.png" alt="Twitter" width="30" height="30">
+            </a>
+          </div>
+          <div id="trademark">
+            </p>
+            <p>
+              &copy; The Food Vault by Team Kil-A-Bytes
+            </p>
+          </div>
+        </div>
+
     </footer>
 
     <!-- Side nav controls -->
