--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -127,18 +127,24 @@
   
     <!-- Footer -->
     <footer>
-      <br><hr>
-      <p>
-        <a href="https://www.instagram.com/thefoodvault">
-          <img src="images/instagram.png" alt="Instagram" width="30" height="30">
-        </a>
-        <a href="https://www.twitter.com/thefoodvault">
-          <img src="images/twitter.png" alt="Twitter" width="30" height="30">
-        </a>
-      </p>
-      <p>
-        &copy; The Food Vault by Team Kil-A-Bytes
-      </p>
+      <br><br><hr>
+        <div class="horizontal-container">
+          <p>Find Us @</p>
+          <div class="vertical-container" style="width: 150px;">
+            <a href="https://www.instagram.com/thefoodvault">
+              <img src="images/instagram.png" alt="Instagram" width="30" height="30">
+            </a>
+            <a href="https://www.twitter.com/thefoodvault">
+              <img src="images/twitter.png" alt="Twitter" width="30" height="30">
+            </a>
+          </div>
+          <div id="trademark">
+            </p>
+            <p>
+              &copy; The Food Vault by Team Kil-A-Bytes
+            </p>
+          </div>
+        </div>
     </footer>
 
     <!-- Side nav controls -->
