--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -93,8 +93,8 @@
           <br><br>
           <h2><b>Have Something To Say About Our Service?</b></h2>
           <hr><br>
-          <fieldset>
-            <section id="add-review" class="horizontal-container">
+          <section id="add-review" class="horizontal-container">
+            <fieldset id="review-form-outline">
               <form id="review">
                 <br><br>
                 <b><legend>Let Us Know Your Thoughts!</legend></b>
@@ -103,16 +103,16 @@
                   <!-- Name Data field -->
                   <label class="label">Name:</label>
                   <br>
-                  <input name="Name" style="width: 300px; height: 30px;"">
+                  <input name="Name" class="data-entry-area">
                   <br><br>
 
                   <!-- Comment Data field -->
                   <label class="label">Comment:</label>
                   <br> 
-                  <textarea name="comment" style="width: 300px; height: 100px;"></textarea>
+                  <textarea name="comment" class="data-entry-area"></textarea>
                   <br><br>
                   
-                  <input type="button" value="Submit Review">
+                  <input type="button" class="data-entry-area" value="Submit Review">
                   <p>Tip: You can leave the "Name" field blank if you wish to be anonymous.</p>
               </form>
             </fieldset>
@@ -130,7 +130,7 @@
       <br><br><hr>
         <div class="horizontal-container">
           <p>Find Us @</p>
-          <div class="vertical-container" style="width: 150px;">
+          <div class="vertical-container" style="width: 170px;">
             <a href="https://www.instagram.com/thefoodvault">
               <img src="images/instagram.png" alt="Instagram" width="30" height="30">
             </a>
