fixed auto expanding side-nav

--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -27,6 +27,12 @@
         background: linear-gradient(to bottom, #f2f2f2, #fafafa);
       }
     </style>
+    <script>
+      // Stop auto open chatarea on load
+      window.onload = function() {
+        document.getElementById("chatbot-area").style.display = "none";
+      }
+    </script>
   </head>
 
   <body>
@@ -149,16 +155,6 @@
 
     <!-- Side nav controls -->
     <script>
-      let x = window.innerWidth;
-      let y = window.innerHeight;
-      let platform = window.navigator.platform;
-
-      // disable active class of side nav area for mobile after window loads
-      window.onload = function() {
-        if (x < y && platform !== "MacIntel" || platform !== "Win32" || platform !== "Linux x86_64") {
-          document.getElementById("chatbot-area").classList.remove("active");
-        }
-      }
 
       function openChatArea() {
         document.getElementById("chatbot-area").style.width = "390px";
