--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <meta name="description" content="INFO 1601 Project for team Kil-A-Bytes 'The Food Vault'">
     <link rel="stylesheet"   href="style.css">
     <title>The Food Vault</title>
-    <style>
-    </style>
+    <script>
+      // Stop auto open chatarea on load
+      window.onload = function() {
+        document.getElementById("chatbot-area").style.display = "none";
+      }
+    </script>
   </head>
 
   <body>
@@ -98,28 +102,26 @@
     <!-- Side nav controls -->
     <script>
 
-      let x = window.innerWidth;
-      let y = window.innerHeight;
-      let platform = window.navigator.platform;
-
-      // disable active class of side nav area for mobile after window loads
-      window.onload = function() {
-        // if (x < y && platform !== "MacIntel" || platform !== "Win32" || platform !== "Linux x86_64") {
-        if (x < y) {
-          document.getElementById("chatbot-area").classList.remove("active");
-        }
-      }
-
-
       function openChatArea() {
         document.getElementById("chatbot-area").style.width = "390px";
         document.getElementById("page-content").style.marginLeft = "510px";
+        $(document).ready(function() {
+          $("#side-nav").css("position", "fixed");
+          $("body").css("overflow", "hidden");
+          $("#fixed-button").css("display", "none");
+        });
       }
 
       function closeChatArea() {
         document.getElementById("chatbot-area").style.width = "0";
         document.getElementById("page-content").style.marginLeft = "0";
+        $(document).ready(function() {
+          $("#side-nav").css("position", "relative");
+          $("body").css("overflow", "scroll");
+          $("#fixed-button").css("display", "block");
+        });
       }
+
     </script>
   </body>
   
