--- a/testimonials/testimonials.html
+++ b/testimonials/testimonials.html
@@ -119,7 +119,7 @@
                   <br><br>
                   
                   <input type="button" class="data-entry-area" value="Submit Review">
-                  <p>Tip: You can leave the "Name" field blank if you wish to be anonymous.</p>
+                  <p style="padding-top: 12px;">Tip: You can leave the "Name" field blank if you wish to be anonymous.</p>
               </form>
             </fieldset>
           </section>
