--- a/catalogue/catalogue.html
+++ b/catalogue/catalogue.html
@@ -133,6 +133,7 @@
     <script>
 
       function openChatArea() {
+        document.getElementById("chatbot-area").style.display = "block";
         document.getElementById("chatbot-area").style.width = "390px";
         document.getElementById("page-content").style.marginLeft = "510px";
       }
